--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "vuenavigatormixin",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-typescript": "~4.2.0",
-    "@vue/cli-plugin-unit-jest": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.1",
-    "@vue/test-utils": "1.0.0-beta.31",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.1.2",
-    "prettier": "^1.19.1",
-    "typescript": "~3.7.5",
-    "vue-template-compiler": "^2.6.11"
-  }
+	"name": "vue-navigator-mixin",
+	"version": "0.1.0",
+	"main": "./dist/vue-navigator-mixin.common.js",
+	"private": true,
+	"scripts": {
+		"build": "vue-cli-service build --target lib ./src/index.ts",
+		"test:unit": "vue-cli-service test:unit",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"@types/jest": "^24.0.19",
+		"@typescript-eslint/eslint-plugin": "^2.18.0",
+		"@typescript-eslint/parser": "^2.18.0",
+		"@vue/cli-plugin-babel": "~4.2.0",
+		"@vue/cli-plugin-eslint": "~4.2.0",
+		"@vue/cli-plugin-typescript": "~4.2.0",
+		"@vue/cli-plugin-unit-jest": "~4.2.0",
+		"@vue/cli-service": "~4.2.0",
+		"@vue/eslint-config-prettier": "^6.0.0",
+		"@vue/eslint-config-typescript": "^5.0.1",
+		"@vue/test-utils": "1.0.0-beta.31",
+		"core-js": "^3.6.4",
+		"eslint": "^6.7.2",
+		"eslint-plugin-prettier": "^3.1.1",
+		"eslint-plugin-vue": "^6.1.2",
+		"prettier": "^1.19.1",
+		"typescript": "~3.7.5",
+		"vue": "^2.6.11",
+		"vue-template-compiler": "^2.6.11"
+	},
+	"peerDependencies": {
+		"vue": "^2.4.0"
+	}
 }
